src/recycle/generated/RecycleParser.ts
// Generated from src/recycle/Recycle.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { RecycleListener } from "./RecycleListener.js";
import { RecycleVisitor } from "./RecycleVisitor.js";


export class RecycleParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly T__80 = 81;
	public static readonly T__81 = 82;
	public static readonly T__82 = 83;
	public static readonly T__83 = 84;
	public static readonly BOOLOP = 85;
	public static readonly COMPOP = 86;
	public static readonly EQOP = 87;
	public static readonly UNOP = 88;
	public static readonly INTNUM = 89;
	public static readonly LETT = 90;
	public static readonly OPEN = 91;
	public static readonly CLOSE = 92;
	public static readonly WS = 93;
	public static readonly ANY = 94;
	public static readonly RULE_var = 0;
	public static readonly RULE_vars = 1;
	public static readonly RULE_varo = 2;
	public static readonly RULE_varp = 3;
	public static readonly RULE_vari = 4;
	public static readonly RULE_varb = 5;
	public static readonly RULE_varc = 6;
	public static readonly RULE_varcs = 7;
	public static readonly RULE_varcsc = 8;
	public static readonly RULE_varcard = 9;
	public static readonly RULE_game = 10;
	public static readonly RULE_declare = 11;
	public static readonly RULE_setup = 12;
	public static readonly RULE_scoring = 13;
	public static readonly RULE_stage = 14;
	public static readonly RULE_endcondition = 15;
	public static readonly RULE_multiaction = 16;
	public static readonly RULE_multiaction2 = 17;
	public static readonly RULE_condact = 18;
	public static readonly RULE_agg = 19;
	public static readonly RULE_let = 20;
	public static readonly RULE_action = 21;
	public static readonly RULE_playercreate = 22;
	public static readonly RULE_teamcreate = 23;
	public static readonly RULE_teams = 24;
	public static readonly RULE_deckcreate = 25;
	public static readonly RULE_deck = 26;
	public static readonly RULE_attribute = 27;
	public static readonly RULE_initpoints = 28;
	public static readonly RULE_updatepoints = 29;
	public static readonly RULE_awards = 30;
	public static readonly RULE_subaward = 31;
	public static readonly RULE_cycleaction = 32;
	public static readonly RULE_setaction = 33;
	public static readonly RULE_setstraction = 34;
	public static readonly RULE_incaction = 35;
	public static readonly RULE_decaction = 36;
	public static readonly RULE_moveaction = 37;
	public static readonly RULE_swapaction = 38;
	public static readonly RULE_copyaction = 39;
	public static readonly RULE_removeaction = 40;
	public static readonly RULE_shuffleaction = 41;
	public static readonly RULE_turnaction = 42;
	public static readonly RULE_repeat = 43;
	public static readonly RULE_pointstorage = 44;
	public static readonly RULE_card = 45;
	public static readonly RULE_maxof = 46;
	public static readonly RULE_minof = 47;
	public static readonly RULE_locpre = 48;
	public static readonly RULE_locdesc = 49;
	public static readonly RULE_who = 50;
	public static readonly RULE_whop = 51;
	public static readonly RULE_whot = 52;
	public static readonly RULE_whodesc = 53;
	public static readonly RULE_owner = 54;
	public static readonly RULE_teamp = 55;
	public static readonly RULE_typed = 56;
	public static readonly RULE_collection = 57;
	public static readonly RULE_strcollection = 58;
	public static readonly RULE_range = 59;
	public static readonly RULE_other = 60;
	public static readonly RULE_cstorage = 61;
	public static readonly RULE_basecstorage = 62;
	public static readonly RULE_sortof = 63;
	public static readonly RULE_unionof = 64;
	public static readonly RULE_intersectof = 65;
	public static readonly RULE_disjunctionof = 66;
	public static readonly RULE_filter = 67;
	public static readonly RULE_memstorage = 68;
	public static readonly RULE_sequence = 69;
	public static readonly RULE_runsequence = 70;
	public static readonly RULE_cstoragecollection = 71;
	public static readonly RULE_run = 72;
	public static readonly RULE_subset = 73;
	public static readonly RULE_partition = 74;
	public static readonly RULE_aggcs = 75;
	public static readonly RULE_indexed = 76;
	public static readonly RULE_boolean = 77;
	public static readonly RULE_intop = 78;
	public static readonly RULE_aggb = 79;
	public static readonly RULE_int = 80;
	public static readonly RULE_intgr = 81;
	public static readonly RULE_sum = 82;
	public static readonly RULE_scoremax = 83;
	public static readonly RULE_scoremin = 84;
	public static readonly RULE_score = 85;
	public static readonly RULE_add = 86;
	public static readonly RULE_mult = 87;
	public static readonly RULE_subtract = 88;
	public static readonly RULE_mod = 89;
	public static readonly RULE_divide = 90;
	public static readonly RULE_exponent = 91;
	public static readonly RULE_triangular = 92;
	public static readonly RULE_fibonacci = 93;
	public static readonly RULE_random = 94;
	public static readonly RULE_sizeof = 95;
	public static readonly RULE_aggi = 96;
	public static readonly RULE_rawstorage = 97;
	public static readonly RULE_pid = 98;
	public static readonly RULE_tid = 99;
	public static readonly RULE_str = 100;
	public static readonly RULE_strstorage = 101;
	public static readonly RULE_cardatt = 102;
	public static readonly RULE_namegr = 103;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"var", "vars", "varo", "varp", "vari", "varb", "varc", "varcs", "varcsc", 
		"varcard", "game", "declare", "setup", "scoring", "stage", "endcondition", 
		"multiaction", "multiaction2", "condact", "agg", "let", "action", "playercreate", 
		"teamcreate", "teams", "deckcreate", "deck", "attribute", "initpoints", 
		"updatepoints", "awards", "subaward", "cycleaction", "setaction", "setstraction", 
		"incaction", "decaction", "moveaction", "swapaction", "copyaction", "removeaction", 
		"shuffleaction", "turnaction", "repeat", "pointstorage", "card", "maxof", 
		"minof", "locpre", "locdesc", "who", "whop", "whot", "whodesc", "owner", 
		"teamp", "typed", "collection", "strcollection", "range", "other", "cstorage", 
		"basecstorage", "sortof", "unionof", "intersectof", "disjunctionof", "filter", 
		"memstorage", "sequence", "runsequence", "cstoragecollection", "run", 
		"subset", "partition", "aggcs", "indexed", "boolean", "intop", "aggb", 
		"int", "intgr", "sum", "scoremax", "scoremin", "score", "add", "mult", 
		"subtract", "mod", "divide", "exponent", "triangular", "fibonacci", "random", 
		"sizeof", "aggi", "rawstorage", "pid", "tid", "str", "strstorage", "cardatt", 
		"namegr",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'''", "'game'", "'declare'", "'setup'", "'scoring'", "'min'", 
		"'max'", "'stage'", "'player'", "'team'", "'simultaneous'", "'once'", 
		"'end'", "'choice'", "'do'", "'any'", "'all'", "'let'", "'create'", "'players'", 
		"'teams'", "','", "'deck'", "'set'", "'update'", "':'", "'cycle'", "'next'", 
		"'current'", "'inc'", "'dec'", "'move'", "'swap'", "'remember'", "'forget'", 
		"'shuffle'", "'faro'", "'turn'", "'pass'", "'repeat'", "'points'", "'top'", 
		"'bottom'", "'using'", "'vloc'", "'iloc'", "'hloc'", "'oloc'", "'mem'", 
		"'previous'", "'owner'", "'range'", "'..'", "'other'", "'sort'", "'union'", 
		"'intersect'", "'disjunction'", "'filter'", "'run'", "'runs'", "'largest'", 
		"'subsets'", "'partition'", "'indexed'", "'sum'", "'scoremax'", "'scoremin'", 
		"'score'", "'+'", "'*'", "'-'", "'%'", "'//'", "'^'", "'tri'", "'fib'", 
		"'random'", "'size'", "'sto'", "'pid'", "'tid'", "'str'", "'cardatt'", 
		undefined, undefined, undefined, "'not'", undefined, undefined, "'('", 
		"')'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "BOOLOP", "COMPOP", "EQOP", "UNOP", "INTNUM", "LETT", "OPEN", 
		"CLOSE", "WS", "ANY",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(RecycleParser._LITERAL_NAMES, RecycleParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return RecycleParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Recycle.g4"; }

	// @Override
	public get ruleNames(): string[] { return RecycleParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return RecycleParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(RecycleParser._ATN, this);
	}
	// @RuleVersion(0)
	public var(): VarContext {
		let _localctx: VarContext = new VarContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, RecycleParser.RULE_var);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 208;
			this.match(RecycleParser.T__0);
			this.state = 209;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public vars(): VarsContext {
		let _localctx: VarsContext = new VarsContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, RecycleParser.RULE_vars);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 211;
			this.match(RecycleParser.T__0);
			this.state = 212;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varo(): VaroContext {
		let _localctx: VaroContext = new VaroContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, RecycleParser.RULE_varo);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 214;
			this.match(RecycleParser.T__0);
			this.state = 215;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varp(): VarpContext {
		let _localctx: VarpContext = new VarpContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, RecycleParser.RULE_varp);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 217;
			this.match(RecycleParser.T__0);
			this.state = 218;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public vari(): VariContext {
		let _localctx: VariContext = new VariContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, RecycleParser.RULE_vari);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 220;
			this.match(RecycleParser.T__0);
			this.state = 221;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varb(): VarbContext {
		let _localctx: VarbContext = new VarbContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, RecycleParser.RULE_varb);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 223;
			this.match(RecycleParser.T__0);
			this.state = 224;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varc(): VarcContext {
		let _localctx: VarcContext = new VarcContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, RecycleParser.RULE_varc);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 226;
			this.match(RecycleParser.T__0);
			this.state = 227;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varcs(): VarcsContext {
		let _localctx: VarcsContext = new VarcsContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, RecycleParser.RULE_varcs);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 229;
			this.match(RecycleParser.T__0);
			this.state = 230;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varcsc(): VarcscContext {
		let _localctx: VarcscContext = new VarcscContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, RecycleParser.RULE_varcsc);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 232;
			this.match(RecycleParser.T__0);
			this.state = 233;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varcard(): VarcardContext {
		let _localctx: VarcardContext = new VarcardContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, RecycleParser.RULE_varcard);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 235;
			this.match(RecycleParser.T__0);
			this.state = 236;
			this.namegr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public game(): GameContext {
		let _localctx: GameContext = new GameContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, RecycleParser.RULE_game);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 238;
			this.match(RecycleParser.OPEN);
			this.state = 239;
			this.match(RecycleParser.T__1);
			this.state = 243;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 240;
					this.declare();
					}
					}
				}
				this.state = 245;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 246;
			this.setup();
			this.state = 249;
			this._errHandler.sync(this);
			_alt = 1 + 1;
			do {
				switch (_alt) {
				case 1 + 1:
					{
					this.state = 249;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
					case 1:
						{
						this.state = 247;
						this.multiaction();
						}
						break;
